feat: add Dynamic Programming solutions
Signed-off-by: Nilay1999 <nilayparmar19@gmail.com>